[project]
name = "frc-alberthon"
version = "0.1.0"
description = ""
authors = [
    {name = "Rémi Moreau",email = "rmoreau@albertschool.com"},
    {name = "Yann MEUROU",email = "ymeurou2702@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "google-cloud-texttospeech (>=2.27.0,<3.0.0)",
    "google-cloud-translate (>=2.0.0,<3.0.0)",
    "openai (>=1.79.0,<2.0.0)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "setuptools (>=50.0.0,<60.0.0)",
    "six (>=1.16.0,<2.0.0)"
]



[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
